--- a/notebooks/05_data_transfer.qmd
+++ b/notebooks/05_data_transfer.qmd
@@ -6,6 +6,22 @@ output:
     toc_float: false
 from: markdown+emoji
 ---
+## Introduction
+ 
+In this section, we will <TBC>.  
+ 
+The main challenges users may face adapting Artemis workflows to Gadi are:
+ 
+- Adjusting PBS directives to suit Gadi requirements and queue structure
+- Lack of internet access for Gadi compute nodes
+- [Data transfer](./05_data_transfer.qmd)
+- [Gadi walltime limit of 48 hours](./12_walltime.qmd)
+- [Understanding NCI accounting of KSU, disk and iNode limits](./06_accounting.qmd)
+- [Automatic 100-day Gadi /scratch purge policy](https://opus.nci.org.au/spaces/Help/pages/241926268/Recover+Files...#RecoverFiles...-RecoverQuarantinedFilesonscratch)
+- [Software installation and version upgrades on Gadi](./11_software.qmd)
+- [Job arrays not supported on Gadi](./13_parralel_jobs.qmd)
+ 
+In this section, we will look at <TBC>. For the remaining challenges, please visit the specific linked content. We will run training sessions on some of these during the lead up to the Artemis decomission date.
 
 ## Where to put project files on Gadi
 
